package proto;

option java_package = "com.lvl6.gamesuite.common.noneventprotos";
option java_outer_classname = "ForceLogoutProto";

message ForceLogoutResponseProto {
	//atm (2013-5-3), all gamesuite games will have this
	optional string udid = 1;
}