import "TriviaRoundFormat.proto";
import "TriviaQuestionFormat.proto";

package proto;

option java_package = "com.lvl6.pictures.noneventprotos";
option java_outer_classname = "TriviaGameFormatProto";

message OngoingGameProto {
	optional GameResultsProto gameSoFar = 1;
	
	//if this is set, this implies user receiving it
	//is 'secondPlayer' in GameResultsProto 'gameSoFar'
	repeated QuestionProto myNewRoundQuestions = 2;
}

message GameResultsProto {
	optional PlayerGameResultsProto firstPlayer = 1;
	optional PlayerGameResultsProto secondPlayer = 2;
}

message PlayerGameResultsProto {
	//pertinent player information here
	
	repeated BasicRoundResultsProto previousRoundsStats = 1;
}